2003-06-02  Not Zed  <NotZed@Ximian.com>

	** This and jeffs patch for #43862.

	* mail-folder-cache.c (store_online_cb): If the store is still
	around, then flow on to a get folderinfo update, otherwise just
	clear up.

	* mail-ops.c (mail_store_set_offline): return the msgid of this so
	it can be cancelled.

2003-05-30  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-folder-cache.c (mail_note_store): If the session is
	'online' and we are noting a CamelDiscoStore, make sure that it is
	changed to online status and call mail_get_folderinfo().

2003-05-30  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-local.c (load_metainfo): Stat the XML file before trying to
	parse it to make sure it exists.

2003-05-29  Not Zed  <NotZed@Ximian.com>

	* Makefile.am (BUILT_SOURCES): added server_DATA (*.server) so
	make clean works.  For #42691.

2003-05-30  Radek Doulik  <rodo@ximian.com>

	* mail-config.c (config_write_style): use %02x instead of %2x when
	formatting color for rc file

2003-05-29  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes bug #43805.

	* mail-session.c (session_system_beep): Proxy the gdk_beep() call
	to the main thread.
	(session_play_sound): Proxy the gnome_sound_play() call to the
	main thread.

2003-05-27  Not Zed  <NotZed@Ximian.com>

	* message-tag-editor.c (message_tag_editor_init): set the default
	open size to something reasonable.  For #43410.

	* mail-signature-editor.c (d): turn off debugging.

	* mail-config.c (mail_config_signature_add): save new signature in
	signature list.  For #43688.

2003-05-21  Radek Doulik  <rodo@ximian.com>

	* mail-signature-editor.c (menu_file_save_cb): set signature html
	flag even if it's newly signature, we don't set it in
	format_html_cb as sig could be "live" (when it's not new one)

2003-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-importer.c: Updated copyright years.

	* mail-callbacks.c (ask_confirm_for_empty_subject): Fixed the
	logic a bit - if the gconf key *isn't* set, we want to return
	TRUE.
